project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: front-end.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service # Match Service name in k8s/front-end.yml
                port:
                  number: 8081
    - host: broker-service.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker-service # Match Service name in k8s/broker.yml
                port:
                  number: 80
